# CIRC

./: .gitignore  CLAUDE.md  LICENSE  NOTICE  README.md  pyproject.toml
.github/workflows/: ci.yml
circ/: __init__.py  cli.py  compare.py  evaluation.py  io.py  simulations.py
circ/bootjtk/: BooteJTK.py  CalcP.py  arbfit.py  echo_fit.py  get_stat_probs.py  limma_preprocess.py  limma_voom.py  mpfit.py  pipeline.py
circ/expression_classification/: README.md  __init__.py  classify.py
circ/limbr/: README.md  __init__.py  _normalize.py  batch_fx.py  imputation.py  old_fashioned.py  simulations.py
circ/pirs/: README.md  __init__.py  rank.py  simulations.py
circ/rhythmicity/: BooteJTK.py  CalcP.py  README.md  __init__.py  arbfit.py  echo_fit.py  get_stat_probs.py  limma_preprocess.py  limma_voom.py  mpfit.py  pipeline.py
circ/visualization/: README.md  __init__.py  benchmarks.py  classify.py  compare.py
circ/visualization/interactive/: __init__.py  benchmarks.py  classify.py  compare.py
examples/: 01_classify_and_explore.py  02_validate_decisions.py  03_benchmark_simulation.py  04_proteomics_pipeline.py  05_gene_inspection.py  06_compare_conditions.py  07_compare_proteomics_vs_expression.py  README.md  run_all.py
tests/: test_compare.py  test_e2e_pipeline.py  test_evaluation.py  test_io.py  test_simulations.py
tests/bootjtk/: conftest.py  test_arbfit.py  test_bootjtk_utils.py  test_calcp.py  test_e2e_simulated.py  test_echo_fit.py  test_limma_preprocess.py  test_limma_voom.py  test_stat_probs.py  test_syntax.py
tests/expression_classification/: conftest.py  test_classify.py  test_e2e.py  test_metrics_quality.py
tests/limbr/: conftest.py  test_batch_fx.py  test_imputation.py  test_old_fashioned.py  test_simulations.py
tests/pirs/: conftest.py  test_e2e.py  test_rank.py  test_simulations.py
tests/rhythmicity/: conftest.py  test_arbfit.py  test_bootjtk_utils.py  test_calcp.py  test_e2e_simulated.py  test_echo_fit.py  test_limma_preprocess.py  test_limma_voom.py  test_pipeline_parser.py  test_stat_probs.py  test_syntax.py
tests/visualization/: test_benchmarks.py  test_classify_plots.py  test_compare_plots.py  test_interactive.py
