[project]
name = "circ"
version = "0.1.0"
description = "Circadian Integrated Research Core"
authors = [
    {name = "Alexander Crowell", email = "ac2759@georgetown.edu"}
]
license = "BSD-3-Clause"
readme = "README.md"
keywords = ["circadian", "bioinformatics", "SVA", "JTK", "proteomics", "RNAseq"]
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.4",
    "pandas>=3.0",
    "scipy>=1.17",
    "scikit-learn>=1.8",
    "statsmodels>=0.14",
    "tqdm>=4.67",
    "multiprocess>=0.70",
    "matplotlib>=3.10",
    "pyarrow>=23.0.1",
    "seaborn>=0.11",
    "ipykernel (>=7.2.0,<8.0.0)",
]

[project.optional-dependencies]
fast = ["numba>=0.50.0"]
interactive = ["plotly>=6.0"]

[project.scripts]
circ = "circ.cli:main"

[tool.poetry]
packages = [{include = "circ"}]
include = ["circ/rhythmicity/ref_files/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=circ --cov-report=term-missing --cov-report=xml"

[tool.coverage.run]
source = ["circ"]
omit = ["circ/rhythmicity/mpfit.py"]

[tool.ruff.lint]
select = ["E", "F"]
ignore = [
    "E402",  # module-level import not at top — common in scientific modules with sys.path setup
    "E501",  # line too long — scientific code routinely exceeds 88 chars
    "E731",  # lambda assignment — common in scientific code
    "E741",  # ambiguous variable name — l, O, I are standard in linear algebra
    "F841",  # unused variable — common in scientific unpacking
]

[tool.ruff.lint.per-file-ignores]
"circ/*/__init__.py" = ["F401"]
"circ/__init__.py" = ["F401"]

[tool.mypy]
ignore_missing_imports = true
check_untyped_defs = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = ["pytest>=9.0.3", "plotly>=6.0", "ruff (>=0.15.12,<0.16.0)", "mypy (>=1.20.2,<2.0.0)", "pytest-cov (>=7.1.0,<8.0.0)"]
